# template_project

./: .gitignore  .justfile  Dockerfile  alembic.ini  config.example.toml  docker-compose.example.yml  pyproject.toml
src/template_project/adapters/: password_utils.py  unit_of_work.py
src/template_project/adapters/access_token/: cryptographer.py  factory.py
src/template_project/adapters/data_gateways/: access_token.py  tables.py  user.py
src/template_project/application/access_token/: cryptographer.py  data_gateway.py  entity.py  entity_factory.py  errors.py
src/template_project/application/common/: containers.py  data_structure.py  entity.py  errors.py  identity_provider.py  interactor.py  unit_of_work.py
src/template_project/application/user/: data_gateway.py  entity.py  errors.py  password_utils.py
src/template_project/application/user/interactors/: get_me.py  sign_up.py
src/template_project/migrations/: env.py
src/template_project/web_api/: configuration.py  entiry_point.py  entry_point.py  identity_provider.py
src/template_project/web_api/ioc/: connection.py  cryptographer.py  data_gateway.py  factory.py  idp.py  interactor.py  make.py
src/template_project/web_api/routes/: healthcheck.py  user.py
tests/web_api/: conftest.py  ioc.py
tests/web_api/e2e/: test_healthcheck.py
